--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "keywords": [],
   "author": "Diegoson",
   "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0",
+    "@whiskeysockets/baileys": "6.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@consumet/extensions": "^1.4.18",
     "@hapi/boom": "^10.0.1",
