--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@types/node": "^18.0.6",
     "async-g-i-s": "^1.4.0",
     "axios": "^1.4.0",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "discord.js": "^14.11.0",
     "emoji-strip": "^1.0.1",
     "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
     "file-type": "^14.3.0",
     "form-data": "^4.0.0",
-    "mumaker": "^1.0.0",
+    "mumaker": "^2.0.0",
+    "mongoose": "^7.4.4",
     "node-fetch": "^3.2.6",
     "openai": "^3.2.1",
     "pino": "^8.14.1",
