--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async-g-i-s": "^1.4.0",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
+    "express": "^4.18.2",
     "discord.js": "^14.11.0",
     "emoji-strip": "^1.0.1",
     "express": "^4.18.2",
