--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "3.0.0",
   "main": "core.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1"
+  "test": "echo \"Error: no test specified\" && exit 1",
   "start": "node --max-old-space-size=4096 core.js"
   },
-  "keywords": [],
   "author": "Diegoson",
   "dependencies": {
     "@whiskeysockets/baileys": "6.4.0",
