--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^4.1.2",
     "express": "^4.18.2",
     "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
     "emoji-strip": "^1.0.1",
     "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
