--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^3.2.1",
     "pino": "^8.14.1",
     "qr-image": "^3.2.0",
+    "qrcode-terminal": "^0.12.0",
     "quick.db": "^9.1.6",
     "quickmongo": "^5.2.0",
     "wa-sticker-formatter": "^4.4.4"
