--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-fetch": "^3.2.6",
     "openai": "^3.2.1",
     "pino": "^8.14.1",
+    "path": "^0.12.7",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "quick.db": "^9.1.6",
