--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ffmpeg": "^0.0.4",
     "file-type": "^14.3.0",
     "form-data": "^4.0.0",
+    "fs-extra": "^11.1.0",
     "mumaker": "^2.0.0",
     "mongoose": "^7.4.4",
     "node-fetch": "^3.2.6",
