--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@consumet/extensions": "^1.4.18",
     "@hapi/boom": "^10.0.1",
     "@types/node": "^18.0.6",
+    "@viper-x/fancytext": "^1.0.2",
     "axios": "^1.4.0",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
