--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^18.0.6",
     "@viper-x/fancytext": "^1.0.2",
     "axios": "^1.4.0",
+    "node-os-utils": "^1.3.7",
     "chalk": "^4.1.2",
+    "child_process": "^1.0.2",
     "express": "^4.18.2",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
@@ -26,6 +28,7 @@
     "form-data": "^4.0.0",
     "fs-extra": "^11.1.0",
     "mumaker": "^2.0.0",
+    "moment-timezone": "^0.5.41",
     "mongoose": "^7.4.4",
     "node-fetch": "^3.2.6",
     "openai": "^3.2.1",
