--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "openai": "^3.2.1",
     "pino": "^8.14.1",
     "path": "^0.12.7",
+    "network-speed": "^2.1.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "quick.db": "^9.1.6",
     "quickmongo": "^5.2.0",
     "wa-sticker-formatter": "^4.4.4"
+    "google-it": "^1.6.2",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.2",
     },
     "directories": {
     "lib": "lib"
