--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "qrcode-terminal": "^0.12.0",
     "quick.db": "^9.1.6",
     "quickmongo": "^5.2.0",
-    "wa-sticker-formatter": "^4.4.4"
+    "wa-sticker-formatter": "^4.4.4",
     "google-it": "^1.6.2",
     "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.2",
+    "ytdl-core": "^4.11.2"
     },
     "directories": {
     "lib": "lib"
