--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "openai": "^3.2.1",
     "pino": "^8.14.1",
     "path": "^0.12.7",
+    "human-readable": "^0.2.1",
     "network-speed": "^2.1.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
