--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@viper-x/fancytext": "^1.0.2",
     "axios": "^1.4.0",
     "node-os-utils": "^1.3.7",
+    "node-fetch": "3.0.0-beta.9",
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
     "express": "^4.18.2",
