--- a/package.json
+++ b/package.json
@@ -3,66 +3,66 @@
   "version": "3.0.0",
   "main": "core.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node --max-old-space-size=4096 core.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --max-old-space-size=4096 core.js"
   },
   "author": "Diegoson",
   "dependencies": {
-    "@whiskeysockets/baileys": "6.4.1",
+    "@whiskeysockets/baileys": "^7.1.1",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@consumet/extensions": "^1.4.18",
-    "@hapi/boom": "^10.0.1",
-    "@types/node": "^18.0.6",
+    "@consumet/extensions": "^2.0.0",
+    "@hapi/boom": "^10.4.0",
+    "@types/node": "^16.9.1",
     "@viper-x/fancytext": "^1.0.2",
-    "axios": "^1.4.0",
+    "axios": "^0.24.0",
     "node-os-utils": "^1.3.7",
-    "node-fetch": "3.0.0-beta.9",
+    "node-fetch": "^3.1.0",
     "chalk": "^4.1.2",
     "cfonts": "^3.2.0",
     "child_process": "^1.0.2",
-    "express": "^4.18.2",
+    "express": "^4.17.1",
     "btch-downloader": "^2.0.8",
     "@bochilteam/scraper": "^4.2.3",
     "api-dylux": "^1.4.4",
-    "fb-info-video":"^1.0.2",
-    "discord.js": "^14.11.0",
+    "fb-info-video": "^1.0.2",
+    "discord.js": "^13.3.0",
     "dotenv": "^16.3.1",
     "emoji-strip": "^1.0.1",
-    "express": "^4.18.2",
     "ffmpeg": "^0.0.4",
-    "file-type": "^14.3.0",
-    "form-data": "^4.0.0",
-    "fs-extra": "^11.1.0",
+    "file-type": "^16.3.0",
+    "form-data": "^4.5.1",
+    "fs-extra": "^10.0.0",
     "mumaker": "^2.0.0",
     "moment-timezone": "^0.5.41",
-    "mongoose": "^7.4.4",
-    "node-fetch": "^3.2.6",
-    "openai": "^3.2.1",
-    "pino": "^8.14.1",
-    "path": "^0.12.7",
+    "mongoose": "^6.0.12",
+    "node-fetch": "^3.1.0",
+    "openai": "^0.29.0",
+    "pino": "^7.7.0",
+    "path": "^16.6.0",
     "human-readable": "^0.2.1",
     "network-speed": "^2.1.1",
-    "qr-image": "^3.2.0",
+    "qr-image": "^5.4.0",
     "qrcode-terminal": "^0.12.0",
-    "quick.db": "^9.1.6",
-    "quickmongo": "^5.2.0",
-    "wa-sticker-formatter": "^4.4.4",
-    "google-it": "^1.6.2",
-    "aztec-md-ytdl": "3.0.0",
-    "yt-search": "^2.10.4",
-    "ytdl-core": "^4.11.2",
-    "youtube-yts": "^2.0.0"
-    },
-    "directories": {
+    "quick.db": "^8.1.1",
+    "quickmongo": "^5.3.0",
+    "wa-sticker-formatter": "^5.0.0",
+    "google-it": "^1.2.2",
+    "aztec-md-ytdl": "^3.0.0",
+    "yt-search": "^4.2.1",
+    "ytdl-core": "^4.9.1",
+    "youtube-yts": "^2.1.0",
+    "mongodb": "^4.1.4"
+  },
+  "directories": {
     "lib": "lib"
-    },
-    "repository": {
+  },
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/Vorterx/Aztec-MD.git"
-    },
-    "bugs": {
+  },
+  "bugs": {
     "url": "https://github.com/Vorterx/Aztec-MD/issues"
-     },
-     "homepage": "https://github.com/Vorterx/Aztec-MD#readme",
-     "description": ""
-     }
+  },
+  "homepage": "https://github.com/Vorterx/Aztec-MD#readme",
+  "description": "An awesome WhatsApp User Bot made by the Vorterx Team! Power up your chats with cool features."
+}
