--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vorterx",
   "version": "3.0.0",
+  "engines": {
+    "node": ">=14"
+  },
   "main": "core.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
