--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment-timezone": "^0.5.41",
     "mongoose": "^7.5.3",
     "node-fetch": "^3.1.0",
+    "neofetch": "^7.1.2",
     "openai": "^3.2.1",
     "pino": "^8.14.1",
     "path": "^0.12.7",
