--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@viper-x/fancytext": "^1.0.2",
     "axios": "^0.24.0",
     "node-os-utils": "^1.3.7",
+    "util": "^0.12.4",
     "chalk": "^4.1.2",
     "cfonts": "^3.2.0",
     "child_process": "^1.0.2",
