--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "^4.1.2",
     "cfonts": "^3.2.0",
     "child_process": "^1.0.2",
+    "curve25519-js": "^0.0.4",
     "express": "^4.17.1",
     "btch-downloader": "^2.0.8",
     "@bochilteam/scraper": "^4.2.3",
