--- a/app.json
+++ b/app.json
@@ -16,13 +16,13 @@
      "description": "Put your bot name here as its required."
     },
     "SESSION_ID": {
-    "description": "A random string for your bot session. Which works as an OTP to get qr code. You have to change session every time to get a new qr."
+    "description": "A sessionld that you scanned paste it here."
     },
     "MODS": {
     "description": "Put any phone number without + , () and spaces \",\" Ex: 27686881509 )",
     "required": false
     },
-    "MONGODB": {
+    "MONGODB_URI": {
     "description": "Mongodb Url is required add mongoUrl."
     }
    },
