--- a/app.json
+++ b/app.json
@@ -18,6 +18,11 @@
     "SESSION_ID": {
     "description": "A sessionld that you scanned paste it here."
     },
+    "MENU": {
+    "description": "Choose number between 0 and 2 were 2 is aztec menu 0 suhail menu or if you want it to change randomly leave it blank."
+    "required": false
+    "value": "2"
+    },
     "MODS": {
     "description": "Put any phone number without + , () and spaces \",\" Ex: 27686881509 )",
     "required": false
