--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
   {
-  "name": "aztec",
+  "name": "Aztec",
   "description": "multi bot with rich features made by Vorterx team",
   "keywords": [
     "aztec",
