--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pino": "^8.14.1",
     "path": "^0.12.7",
     "pastebin-js": "^1.0.6",
+    "luxon": "^3.4.3",
     "human-readable": "^0.2.1",
     "network-speed": "^2.1.1",
     "qr-image": "^3.2.0",
