--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-fetch": "^3.1.0",
     "neofetch": "^7.1.0",
     "openai": "^3.2.1",
+    "aptoide-scraper":"^1.0.1",
     "pino": "^8.14.1",
     "path": "^0.12.7",
     "pastebin-js": "^1.0.6",
