--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hapi/boom": "^10.0.1",
     "@types/node": "^16.9.1",
     "@viper-x/fancytext": "^1.0.2",
+    "@xaviabot/fb-downloader": "^1.0.14",
     "axios": "^0.24.0",
     "node-os-utils": "^1.3.7",
     "util": "^0.12.4",
