--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "child_process": "^1.0.2",
     "curve25519-js": "^0.0.4",
     "chess.js": "1.0.0-beta.6",
+    "chessground": "^9.0.4",
     "express": "^4.17.1",
     "btch-downloader": "^2.0.8",
     "@bochilteam/scraper": "^4.2.3",
