--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "diego"
   ],
   "repository": "https://github.com/Vorterx/Aztec-MD.git",
-  "logo": "https://i.ibb.co/wKzdRH6/vorterx.png",
+  "logo": "https://i.ibb.co/BwZZ2NN/ec5d0fba-ddc7-476c-afad-01e5fb9a4e7c-channel-offline-image-1920x1080.jpg",
   "env": {
     "PREFIX": {
      "description": "Prefix of your bot Ex: . , / , # , & etc. Put anythong except @ (Default is .)",
